--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
           <li>
-            <a href="Thatikonda-Vishwanath-DA.pdf" download>Download Resume</a>
+            <a
+              href="https://drive.google.com/file/d/18DV_EZNbaj3urKI8xYK1YGWGE_4Td216/view?usp=drive_link"
+              download
+              >Download Resume</a
+            >
           </li>
         </ul>
       </nav>
@@ -90,8 +94,13 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        B-Tech graduate from Guru Nanak Institute of Technology with expertise
-        in Python, MySQL, Power BI, and Data Analytics.
+        A highly motivated and detail-oriented professional with skills in
+        Python, MySQL, Excel, and Power BI seeking a role in software
+        development or data analytics. Passionate about solving complex problems
+        through data-driven insights and efficient software solutions. Adept at
+        handling databases, automating tasks, and building analytical reports.
+        Eager to contribute my technical expertise to drive business growth and
+        innovation.
       </p>
     </section>
 
