--- a/index.html
+++ b/index.html
@@ -5,158 +5,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thatikonda Vishwanath - Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background: linear-gradient(120deg, #3498db, #8e44ad);
-        color: white;
-        text-align: center;
-      }
-      header {
-        background: rgba(0, 0, 0, 0.8);
-        padding: 20px;
-        position: fixed;
-        width: 100%;
-        top: 0;
-        left: 0;
-      }
-      h1 {
-        margin: 0;
-        font-size: 2.5em;
-      }
-      nav ul {
-        list-style: none;
-        padding: 0;
-      }
-      nav ul li {
-        display: inline;
-        margin: 0 15px;
-      }
-      nav ul li a {
-        color: white;
-        text-decoration: none;
-        font-size: 1.2em;
-        transition: 0.3s;
-      }
-      nav ul li a:hover {
-        color: #f1c40f;
-      }
-      section {
-        padding: 100px 20px;
-      }
-      #projects ul {
-        list-style: none;
-        padding: 0;
-      }
-      #projects ul li {
-        background: rgba(255, 255, 255, 0.2);
-        margin: 10px;
-        padding: 15px;
-        border-radius: 10px;
-        transition: 0.3s;
-      }
-      #projects ul li:hover {
-        background: rgba(255, 255, 255, 0.4);
-        transform: scale(1.05);
-      }
-      footer {
-        background: rgba(0, 0, 0, 0.8);
-        padding: 20px;
-        position: fixed;
-        width: 100%;
-        bottom: 0;
-        left: 0;
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <h1>Thatikonda Vishwanath</h1>
-      <p>Data Analyst | Problem Solver | Tech Enthusiast</p>
-      <nav>
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li>
-            <a
-              href="https://drive.google.com/file/d/18DV_EZNbaj3urKI8xYK1YGWGE_4Td216/view?usp=drive_link"
-              download
-              >Download Resume</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <!-- Navigation -->
+    <nav>
+      <div class="logo">TV</div>
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
 
+    <!-- Home Section -->
+    <section id="home">
+      <div class="hero">
+        <h1>Thatikonda Vishwanath</h1>
+        <p>Data Enthusiast | Python Developer | Data Analyst</p>
+        <a
+          href="https://drive.google.com/file/d/18DV_EZNbaj3urKI8xYK1YGWGE_4Td216/view?usp=drive_link"
+          download
+          class="btn"
+          >Download Resume</a
+        >
+      </div>
+    </section>
+
+    <!-- About Section -->
     <section id="about">
       <h2>About Me</h2>
-      <p>
-        A highly motivated and detail-oriented professional with skills in
-        Python, MySQL, Excel, and Power BI seeking a role in software
-        development or data analytics. Passionate about solving complex problems
-        through data-driven insights and efficient software solutions. Adept at
-        handling databases, automating tasks, and building analytical reports.
-        Eager to contribute my technical expertise to drive business growth and
-        innovation.
-      </p>
+      <div class="about-content">
+        <p>
+          Hello! I’m Thatikonda Vishwanath, a B.Tech graduate in Computer
+          Science from Guru Nanak Institute of Technology, Hyderabad (CGPA:
+          7.28). I’m passionate about data analysis, Python programming, and
+          building impactful projects. I recently completed an internship with
+          IBM SkillsBuild, where I developed an interactive chatbot using IBM
+          Cloud.
+        </p>
+        <p><strong>Location:</strong> Hyderabad, Telangana, India</p>
+        <p>
+          <strong>Email:</strong> thatikondavishwanath@gmail.com |
+          <strong>Phone:</strong> +91 6305218644
+        </p>
+        <p>
+          <strong>Links:</strong>
+          <a href="www.linkedin.com/in/thatikondavishwanath" target="_blank"
+            >LinkedIn</a
+          >
+          |
+          <a href="https://github.com/vishwanath-thatikonda" target="_blank"
+            >GitHub</a
+          >
+        </p>
+      </div>
     </section>
 
+    <!-- Skills Section -->
+    <section id="skills">
+      <h2>Skills</h2>
+      <div class="skills-container">
+        <div class="skill-card">
+          <h3>Technical Skills</h3>
+          <ul>
+            <li>Python</li>
+            <li>MySQL</li>
+            <li>Microsoft Excel</li>
+            <li>Power BI</li>
+            <li>AWS (Basics)</li>
+            <li>Git</li>
+          </ul>
+        </div>
+        <div class="skill-card">
+          <h3>Soft Skills</h3>
+          <ul>
+            <li>Adaptability</li>
+            <li>Communication</li>
+            <li>Presentation Skill</li>
+            <li>Time Management</li>
+            <li>Reporting</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Projects Section -->
     <section id="projects">
       <h2>Projects</h2>
-      <ul>
-        <li>
-          <a
-            href="https://github.com/vishwanath-thatikonda/Hangman-game"
-            target="_blank"
-            >Hangman Game</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://github.com/vishwanath-thatikonda/AMAZON-SALES-ANALYSIS"
-            target="_blank"
-            >Amazon Sales Analysis</a
-          >
-        </li>
-        <li>
-          <a
-            href="https://github.com/vishwanath-thatikonda/Job-Analysis-Dashboard"
-            target="_blank"
-            >Job Analysis Dashboard</a
-          >
-        </li>
-      </ul>
+      <div class="projects-container">
+        <div class="project-card">
+          <h3>Hangman Game (CLI)</h3>
+          <p>
+            A console-based game built with Python. Features word selection,
+            input validation, and hangman visuals.
+          </p>
+          <p>
+            <strong>Skills:</strong> Python (loops, conditionals, functions),
+            Random module
+          </p>
+        </div>
+        <div class="project-card">
+          <h3>Amazon Sales Analysis</h3>
+          <p>
+            Analyzed 10,000 rows of Amazon sales data to identify trends in
+            revenue and customer behavior.
+          </p>
+          <p><strong>Skills:</strong> Python (NumPy, Pandas, Matplotlib)</p>
+        </div>
+        <div class="project-card">
+          <h3>Job Analysis Dashboard</h3>
+          <p>
+            Built a dashboard to analyze job market trends using Power BI and
+            Excel.
+          </p>
+          <p><strong>Skills:</strong> Power BI, Excel, Power Query Editor</p>
+        </div>
+      </div>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact">
-      <h2>Contact</h2>
-      <p>
-        Email:
-        <a href="mailto:thatikondavishwanath@gmail.com"
-          >thatikondavishwanath@gmail.com</a
-        >
-      </p>
-      <p>
-        LinkedIn:
-        <a
-          href="https://www.linkedin.com/in/thatikondavishwanath"
-          target="_blank"
-          >LinkedIn Profile</a
-        >
-      </p>
-      <p>
-        GitHub:
-        <a href="https://github.com/vishwanath-thatikonda" target="_blank"
-          >GitHub Profile</a
-        >
-      </p>
+      <h2>Contact Me</h2>
+      <p>Feel free to reach out for collaboration or inquiries!</p>
+      <p><strong>Email:</strong> thatikondavishwanath@gmail.com</p>
+      <p><strong>Phone:</strong> +91 6305218644</p>
     </section>
 
+    <!-- Footer -->
     <footer>
-      <p>&copy; 2025 Thatikonda Vishwanath | All Rights Reserved</p>
+      <p>&copy; 2025 Thatikonda Vishwanath. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
