re verified code

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <section id="home">
       <div class="hero">
         <h1>Thatikonda Vishwanath</h1>
-        <p>Data Enthusiast | Python Developer | Data Analyst</p>
+        <p>Data Enthusiast | Python Developer | Power BI Analyst</p>
         <a
-          href="https://drive.google.com/file/d/18DV_EZNbaj3urKI8xYK1YGWGE_4Td216/view?usp=drive_link"
+          href="https://drive.google.com/file/d/1WwoTosn3X1OfQNImvMO5yyhUK4eAUWpm/view?usp=drive_link"
           download
           class="btn"
           >Download Resume</a
